I'm trying again on my personal colab license.

--- a/IST691/workspace.ipynb
+++ b/IST691/workspace.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +93,7 @@
         "id": "6CsjgFhE-A3s",
         "outputId": "5a1cf6eb-883e-49c0-a180-0393463f6287"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "id": "jtP_WaRJDT3U",
         "outputId": "2aa11f20-bcc8-4172-a0e8-c1fcb4c3e0a2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "5tda4LKZUtUu",
         "colab": {
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "IeMBGpu8rYXf"
       },
@@ -312,7 +312,7 @@
       "metadata": {
         "id": "BIoHo7jTRMwG"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "oFPefKgUuAWv"
       },
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "bsnHqX23dsxV"
       },
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "zBswbvOcVmRo",
         "colab": {
@@ -472,7 +472,7 @@
       "metadata": {
         "id": "T3MOeHDSaf_L"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
       "metadata": {
         "id": "5v56N-_Gaj2V"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -498,7 +498,7 @@
         "id": "rZo29oZ-fpcs",
         "outputId": "83fd6638-9fbd-40db-860d-5cdeba294dd1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,7 +527,7 @@
       "metadata": {
         "id": "WefPFrKugSLT"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,7 +543,7 @@
         "id": "sE7cRbJ-g2eA",
         "outputId": "5817ae07-7d31-4f77-ce49-885d04fbdf6a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +865,7 @@
       "metadata": {
         "id": "8Pg0ssXT274o"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -880,7 +880,7 @@
         "id": "C04SAEHlFs6S",
         "outputId": "c9fe1973-5afc-43e4-8441-2db1761c273b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,8 +907,8 @@
         "time.sleep(5)  # Let the server come all the way up.\n",
         "#then start the server with ollama serve &\n",
         "#first time also will need to pull in a ollama version using ollama pull mistral\n",
-        "# preferred_model = 'gema3:12b'\n",
-        "preferred_model = 'mistral'\n",
+        "preferred_model = 'gema3:12b'\n",
+        "# preferred_model = 'mistral'\n",
         "found = False\n",
         "for _, l in ollama.list():\n",
         "  for m in l:\n",
@@ -926,7 +926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +956,8 @@
       "source": [
         "#check here if ollama has a version and can be used, will say model you pulled\n",
         "!ollama list\n",
-        "!ollama pull mistral"
+        "# !ollama pull mistral\n",
+        "# !ollama pull gemma3:12b"
       ],
       "metadata": {
         "id": "8h3pM0E51IbY",
@@ -965,7 +966,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -997,7 +998,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1017,10 +1018,11 @@
         "    break\n",
         "  print(f'Send to LLM:\\n\\n{tax.as_row()[\"description\"]}')\n",
         "  #sample message to turn data into json format\n",
-        "  response = ollama.chat(model='mistral', messages=[{\n",
+        "  response = ollama.chat(model=preferred_model, messages=[{\n",
         "     'role': 'user',\n",
         "     'content': f'Please extract features, subfeatures, and values from the following species description. Format the response as json:\\n{tax.as_row()}',},\n",
         "  ])\n",
+        "  print('Result:')\n",
         "  print(response['message']['content'])"
       ],
       "metadata": {
@@ -1173,7 +1175,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V28",
+      "gpuType": "A100",
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1183,7 +1186,7 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
