This version of the prompt behaves fairly well. It still sometimes lumps Color and Shape under Type.

--- a/IST691/workspace.ipynb
+++ b/IST691/workspace.ipynb
@@ -976,35 +976,10 @@
         "  !ollama pull $preferred_model\n"
       ],
       "metadata": {
-        "id": "4dYgPWsg3dHB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eadea3f2-9f3f-455a-bf64-4d9792a7afa5"
+        "id": "4dYgPWsg3dHB"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 13281    0 13281    0     0  65009      0 --:--:-- --:--:-- --:--:-- 65102\n",
-            ">>> Installing ollama to /usr/local\n",
-            ">>> Downloading Linux amd64 bundle\n",
-            "######################################################################## 100.0%\n",
-            ">>> Creating ollama user...\n",
-            ">>> Adding ollama user to video group...\n",
-            ">>> Adding current user to ollama group...\n",
-            ">>> Creating ollama systemd service...\n",
-            "\u001b[1m\u001b[31mWARNING:\u001b[m systemd is not running\n",
-            "\u001b[1m\u001b[31mWARNING:\u001b[m Unable to detect NVIDIA/AMD GPU. Install lspci or lshw to automatically detect and install GPU dependencies.\n",
-            ">>> The Ollama API is now available at 127.0.0.1:11434.\n",
-            ">>> Install complete. Run \"ollama\" from the command line.\n"
-          ]
-        }
-      ]
+      "execution_count": 26,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1630,7 +1605,17 @@
     {
       "cell_type": "code",
       "source": [
-        "prompt = 'Please extract features, subfeatures, and values from the following species description. Format the response as json'\n",
+        "prompt = '''Please extract features, subfeatures, optional subsubfeatures, and values from the following species description.\n",
+        "Format the output as JSON.\n",
+        "The top level of the JSON is feature names. The next level in is subfeature names. The optional next level in is subsubfeature names.\n",
+        "The innermost layer is lists of string-valued values.\n",
+        "Lists are only present at the innermost level of the JSON.\n",
+        "Feature values that are comma-separated strings should be broken down into separate values.\n",
+        "Translate Latin paragraphs to English.\n",
+        "'''\n",
+        "\n",
+        "### The JSON keys are by feature, further broken down by subfeature (make sure to distinguish Type from Shape) and further broken down by optional subsubfeature, with lists of string values at the innermost layer.\n",
+        "\n",
         "description = \"\"\"Fungus anamorphicus. Coloniae in substrato naturali eﬀusae, nigrae. Mycelium\n",
         "superﬁciale, ex hyphis ramosis, septatis, pallide brunneis vel brunneis, laevibus, 1.5–3\n",
         "μm crassis compositum. Conidiophora nulla vel brevis, 1–3-septata, brunnea vel\n",
@@ -1664,21 +1649,115 @@
         "print(response['message']['content'])"
       ],
       "metadata": {
-        "id": "ZKC4Kdg9nizt",
-        "outputId": "8b4c767e-01b0-4a80-8c10-ee2511b73831",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZKC4Kdg9nizt",
+        "outputId": "ed7e43c1-de2e-4a18-edeb-54eb0d2b444c"
       },
-      "execution_count": 24,
+      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "f-string: unmatched ']' (<ipython-input-24-55bbb0dffa27>, line 29)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-55bbb0dffa27>\"\u001b[0;36m, line \u001b[0;32m29\u001b[0m\n\u001b[0;31m    'content': f'{prompt}:\\n\\n{description]}'},\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: unmatched ']'\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Result:\n",
+            " {\n",
+            "      \"Color\": [\n",
+            "         \"Black\"\n",
+            "      ],\n",
+            "      \"Growth_Habitat\": [\n",
+            "         \"Natural substrate eﬀuse\"\n",
+            "      ],\n",
+            "      \"Mycelium_Appearance\": [\n",
+            "         \"Superficial\",\n",
+            "         \"Pale brown to brown, smoothwalled hyphae, 1.5–3 μm thick\"\n",
+            "      ],\n",
+            "      \"Conidiophores\": [\n",
+            "         {\n",
+            "            \"Presence\": [\n",
+            "               \"Absent or short\"\n",
+            "            ],\n",
+            "            \"Septation\": [\n",
+            "               \"1–3-septate\"\n",
+            "            ],\n",
+            "            \"Color\": [\n",
+            "               \"Brown to dark brown\"\n",
+            "            ],\n",
+            "            \"Size\": [\n",
+            "               \"11–28 × 4.5–5 μm\"\n",
+            "            ]\n",
+            "         }\n",
+            "      ],\n",
+            "      \"Conidiogenous_Cells\": [\n",
+            "         {\n",
+            "            \"Type\": [\n",
+            "               \"Monoblastic\",\n",
+            "               \"Determinate\",\n",
+            "               \"Solitary\",\n",
+            "               \"Simple\",\n",
+            "               \"Lageniform or ampulliform\"\n",
+            "            ],\n",
+            "            \"Color\": [\n",
+            "               \"Brown to dark brown, smooth\"\n",
+            "            ],\n",
+            "            \"Size\": [\n",
+            "               \"4.5–6.5 × 3.5–5 μm\",\n",
+            "               \"3–4.5 μm wide at the truncate apex\"\n",
+            "            ],\n",
+            "            \"Shape_at_Apex\": [\n",
+            "               \"Truncated\"\n",
+            "            ]\n",
+            "         }\n",
+            "      ],\n",
+            "      \"Conidia_Characteristics\": [\n",
+            "         {\n",
+            "            \"Type\": [\n",
+            "               \"Holoblastic\",\n",
+            "               \"Solitary\",\n",
+            "               \"Acrogenous\",\n",
+            "               \"Straight or curved\",\n",
+            "               \"Obclavate to obclavate-rostrate\",\n",
+            "               \"Dark brown to brown, smooth\"\n",
+            "            ],\n",
+            "            \"Septation\": [\n",
+            "               \"13–19-distoseptate\"\n",
+            "            ],\n",
+            "            \"Size\": [\n",
+            "               \"130–190 μm long, 7–9 μm thick in the broadest part\",\n",
+            "               \"Tapering to 2–3 μm near the apex\"\n",
+            "            ],\n",
+            "            \"Shape_at_Apex\": [\n",
+            "               \"Attenuated\"\n",
+            "            ],\n",
+            "            \"Apical_Cell_Shape\": [\n",
+            "               \"Rounded\"\n",
+            "            ],\n",
+            "            \"Basal_Cell_Shape\": [\n",
+            "               \"Cylindrical, truncate\"\n",
+            "            ],\n",
+            "            \"Lateral_Appendages\": [\n",
+            "               {\n",
+            "                  \"Presence\": [\n",
+            "                     \"0–2\"\n",
+            "                  ],\n",
+            "                  \"Color\": [\n",
+            "                     \"Brown\"\n",
+            "                  ],\n",
+            "                  \"Septation\": [\n",
+            "                     \"Septate\"\n",
+            "                  ],\n",
+            "                  \"Shape\": [\n",
+            "                     \"Cylindrical\"\n",
+            "                  ],\n",
+            "                  \"Arising_From\": [\n",
+            "                     \"The 2nd or 3rd cells from the apex\"\n",
+            "                  ]\n",
+            "               }\n",
+            "            ]\n",
+            "         }\n",
+            "      ]\n",
+            "   }\n"
           ]
         }
       ]
