Add a function to parse the json training data.
Co-authored-by: Padmaja Kurumaddali <pkurumad@syr.edu>

--- a/IST691/workspace.ipynb
+++ b/IST691/workspace.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +93,7 @@
         "id": "6CsjgFhE-A3s",
         "outputId": "b7a2969f-123b-4f75-ce9f-069d018c8c1a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "id": "jtP_WaRJDT3U",
         "outputId": "67d88875-a062-4e46-d467-094b15574872"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "5tda4LKZUtUu",
         "colab": {
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "IeMBGpu8rYXf"
       },
@@ -318,7 +318,8 @@
         "#import needed modules\n",
         "import os\n",
         "import glob\n",
-        "from typing import List\n",
+        "import json\n",
+        "from typing import Any, Dict, List\n",
         "from pathlib import Path\n",
         "import random\n",
         "\n",
@@ -369,7 +370,7 @@
       "metadata": {
         "id": "BIoHo7jTRMwG"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "oFPefKgUuAWv"
       },
@@ -404,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "bsnHqX23dsxV"
       },
@@ -424,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -460,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -497,7 +498,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "zBswbvOcVmRo",
         "colab": {
@@ -529,7 +530,7 @@
       "metadata": {
         "id": "T3MOeHDSaf_L"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +541,7 @@
       "metadata": {
         "id": "5v56N-_Gaj2V"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +556,7 @@
         "id": "rZo29oZ-fpcs",
         "outputId": "04294436-07a2-4e18-8d47-b7dad6b2ad70"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +585,7 @@
       "metadata": {
         "id": "WefPFrKugSLT"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +601,7 @@
         "id": "sE7cRbJ-g2eA",
         "outputId": "338d6f2d-852f-4087-ca24-44d9ccdee669"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +923,7 @@
       "metadata": {
         "id": "8Pg0ssXT274o"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -937,7 +938,7 @@
         "id": "C04SAEHlFs6S",
         "outputId": "c60d2c0a-9360-4104-bc59-8bc8be7fedc9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +983,7 @@
       "metadata": {
         "id": "4dYgPWsg3dHB"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +1001,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1020,7 @@
       "metadata": {
         "id": "TksUL6vfSpWH"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1040,7 +1041,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,7 +1067,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,7 +1109,7 @@
         "id": "UHO9EXYTiLD9",
         "outputId": "ddaadbd2-e2bc-4486-ad38-b45209bcc56d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6177,7 +6178,7 @@
         "id": "JUqFSyGeWQiT",
         "outputId": "d222c839-cebe-43a6-e290-511dfcaf62f5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6241,7 +6242,7 @@
         "id": "ZKC4Kdg9nizt",
         "outputId": "38ae4fc1-f122-4457-d0b1-fc27ad0e2e8c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6339,6 +6340,55 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def load_json_training(filename: str) -> List[Dict[str, Any]]:\n",
+        "  retval = []\n",
+        "  state = 'START'  # 'description', 'result'\n",
+        "  with open(filename, \"r\", encoding=\"utf-8\") as file:\n",
+        "    lines = []\n",
+        "    description = ''\n",
+        "    for line in file:\n",
+        "      if line.startswith('Send to LLM:'):\n",
+        "        if state == \"result\":\n",
+        "          result = ''.join(lines)\n",
+        "          try:\n",
+        "            result_dict = json.loads(result)\n",
+        "          except json.JSONDecodeError as err:\n",
+        "            print(f'Err: {err}\\n{result}')\n",
+        "          retval.append({'description': description, 'result': result_dict})\n",
+        "        lines = []\n",
+        "        state = 'description'\n",
+        "      elif line.startswith('Result:'):\n",
+        "        if state == \"description\":\n",
+        "          description = ''.join(lines)\n",
+        "          lines = []\n",
+        "        state = 'result'\n",
+        "      else:\n",
+        "        lines.append(line)\n",
+        "    if state == 'result' and len(lines) > 0:\n",
+        "      retval.append({'description': description, 'result': ''.join(lines)})\n",
+        "  return retval\n"
+      ],
+      "metadata": {
+        "id": "ix6m6JFJCjVe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "json_training = load_json_training(workdir / 'json_training.txt')\n",
+        "print(json_training[0])"
+      ],
+      "metadata": {
+        "id": "HGu2lNoPCzSU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
