Pull prompt and description out to their own cell, so we don't have to run ollama just to set the prompt.
This also avoids the two prompt instances getting out of sync.

--- a/IST691/workspace.ipynb
+++ b/IST691/workspace.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/piggyatbaqaqi/skol/blob/PatrickBranch/IST691/workspace.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/piggyatbaqaqi/skol/blob/master/IST691/workspace.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +93,7 @@
         "id": "6CsjgFhE-A3s",
         "outputId": "7fbfff0f-2c21-4a87-cf32-4d865b443ac4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "id": "jtP_WaRJDT3U",
         "outputId": "faa90f21-dd7d-48c0-caf2-b4c3540d4919"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "5tda4LKZUtUu",
         "colab": {
@@ -311,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "IeMBGpu8rYXf"
       },
@@ -372,7 +372,7 @@
       "metadata": {
         "id": "BIoHo7jTRMwG"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "oFPefKgUuAWv"
       },
@@ -407,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "bsnHqX23dsxV"
       },
@@ -427,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -463,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -500,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "zBswbvOcVmRo",
         "colab": {
@@ -532,7 +532,7 @@
       "metadata": {
         "id": "T3MOeHDSaf_L"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,7 +543,7 @@
       "metadata": {
         "id": "5v56N-_Gaj2V"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +558,7 @@
         "id": "rZo29oZ-fpcs",
         "outputId": "6a3699a9-3b2f-44fc-c78f-39989b476ef1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
       "metadata": {
         "id": "WefPFrKugSLT"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
         "id": "sE7cRbJ-g2eA",
         "outputId": "c448232f-79fd-4cb1-b7d6-f5f4dadcc571"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -940,7 +940,7 @@
         "id": "C04SAEHlFs6S",
         "outputId": "9cb6befb-3f7d-409a-c651-3cc26591987c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +982,7 @@
       "metadata": {
         "id": "4dYgPWsg3dHB"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6225,8 +6225,126 @@
         "to 2–3 μm near the apex; apical cells rounded; basal cell cylindrical, truncate,\n",
         "3.5–4.5 μm wide; lateral appendages 0–2, brown, septate, cylindrical, arising\n",
         "from the 2nd or 3rd cells from the apex.\n",
-        "\"\"\"\n",
-        "\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZKC4Kdg9nizt",
+        "outputId": "38ae4fc1-f122-4457-d0b1-fc27ad0e2e8c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Result:\n",
+            " {\n",
+            "      \"Color\": [\n",
+            "         \"black\"\n",
+            "      ],\n",
+            "      \"GrowthHabitat\": [\n",
+            "         \"natural substrate\"\n",
+            "      ],\n",
+            "      \"MyceliumStructure\": {\n",
+            "         \"Type\": [\n",
+            "            \"superficial\"\n",
+            "         ],\n",
+            "         \"Constituent\": {\n",
+            "            \"Hyphae\": [\n",
+            "               \"branched\",\n",
+            "               \"septate\",\n",
+            "               \"pale brown to brown\",\n",
+            "               \"smooth-walled\",\n",
+            "               \"1.5–3 μm thick\"\n",
+            "            ]\n",
+            "         }\n",
+            "      },\n",
+            "      \"Conidiophore\": {\n",
+            "         \"Presence\": [\n",
+            "            \"absent or short\"\n",
+            "         ],\n",
+            "         \"Septation\": [\n",
+            "            \"1–3-septate\"\n",
+            "         ],\n",
+            "         \"Color\": [\n",
+            "            \"brown to dark brown\"\n",
+            "         ],\n",
+            "         \"Size\": [\n",
+            "            \"11–28 × 4.5–5 μm\"\n",
+            "         ]\n",
+            "      },\n",
+            "      \"ConidiogenousCell\": {\n",
+            "         \"Type\": [\n",
+            "            \"monoblastic\",\n",
+            "            \"determinate\",\n",
+            "            \"solitary\",\n",
+            "            \"simple\",\n",
+            "            \"lageniform or ampulliform\",\n",
+            "            \"brown to dark brown\",\n",
+            "            \"smooth\",\n",
+            "            \"4.5–6.5 × 3.5–5 μm\",\n",
+            "            \"3–4.5 μm wide at the truncate apex\"\n",
+            "         ]\n",
+            "      },\n",
+            "      \"Conidia\": {\n",
+            "         \"Type\": [\n",
+            "            \"holoblastic\",\n",
+            "            \"solitary\",\n",
+            "            \"acrogenous\",\n",
+            "            \"straight or curved\",\n",
+            "            \"obclavate to obclavate-rostrate\",\n",
+            "            \"dark brown to brown\",\n",
+            "            \"smooth\",\n",
+            "            \"13–19-distoseptate\",\n",
+            "            \"130–190 μm long\",\n",
+            "            \"7–9 μm thick in the broadest part\",\n",
+            "            \"tapering to 2–3 μm near the apex\"\n",
+            "         ],\n",
+            "         \"ApicalCell\": [\n",
+            "            \"rounded\"\n",
+            "         ],\n",
+            "         \"BasalCell\": [\n",
+            "            \"cylindrical, truncate\",\n",
+            "            \"3.5–4.5 μm wide\"\n",
+            "         ],\n",
+            "         \"LateralAppendages\": {\n",
+            "            \"Presence\": [\n",
+            "               \"0–2\"\n",
+            "            ],\n",
+            "            \"Color\": [\n",
+            "               \"brown\"\n",
+            "            ],\n",
+            "            \"Septation\": [\n",
+            "               \"septate\"\n",
+            "            ],\n",
+            "            \"Shape\": [\n",
+            "               \"cylindrical\"\n",
+            "            ],\n",
+            "            \"Origin\": [\n",
+            "               \"arising from the 2nd or 3rd cells from the apex\"\n",
+            "            ]\n",
+            "         }\n",
+            "      }\n",
+            "   }\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Uocbkoe5h8Bz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "response = ollama.chat(model=preferred_model, messages=[{\n",
         "    'role': 'user',\n",
         "    'content': f'{prompt}:\\n\\n{description}'},\n",
@@ -6238,8 +6356,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZKC4Kdg9nizt",
-        "outputId": "38ae4fc1-f122-4457-d0b1-fc27ad0e2e8c"
+        "outputId": "38ae4fc1-f122-4457-d0b1-fc27ad0e2e8c",
+        "id": "tkQ0rrzBh8Vi"
       },
       "execution_count": null,
       "outputs": [
@@ -6379,7 +6497,7 @@
       "metadata": {
         "id": "ix6m6JFJCjVe"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6395,7 +6513,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6478,7 +6596,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6569,7 +6687,7 @@
           ]
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6610,7 +6728,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6694,7 +6812,7 @@
           ]
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6770,20 +6888,12 @@
       "metadata": {
         "id": "oEQ02fyvbir7"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "prompt = '''Please extract features, subfeatures, optional subsubfeatures, and values from the following species description.\n",
-        "Format the output as JSON.\n",
-        "The top level of the JSON is feature names. The next level in is subfeature names . The optional next level in is subsubfeature names.\n",
-        "The innermost layer is lists of string-valued values.\n",
-        "Lists are only present at the innermost level of the JSON.\n",
-        "Feature values that are comma-separated strings should be broken down into separate values.\n",
-        "Translate Latin paragraphs to English.\n",
-        "'''\n",
         "def generate_and_tokenize_prompt(data_point):\n",
         "    full_prompt =f\"\"\"{prompt}:\n",
         "    description:\n",
@@ -6796,7 +6906,7 @@
       "metadata": {
         "id": "GQtJPsvEbyJ6"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6854,7 +6964,7 @@
           ]
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6906,8 +7016,7 @@
         "model_input = tokenizer(eval_prompt, return_tensors=\"pt\").to(\"cuda\")\n",
         "model.eval()\n",
         "with torch.no_grad():\n",
-        "    print(tokenizer.decode(model.generate(**model_input, max_new_tokens=256, pad_token_id=2)[0], skip_special_tokens=True))\n",
-        ""
+        "    print(tokenizer.decode(model.generate(**model_input, max_new_tokens=256, pad_token_id=2)[0], skip_special_tokens=True))\n"
       ],
       "metadata": {
         "id": "I1uN7VLUf0K4",
@@ -6916,7 +7025,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
