Draft code to generate more training data.

--- a/IST691/mistral_transfer_learning.ipynb
+++ b/IST691/mistral_transfer_learning.ipynb
@@ -2930,6 +2930,35 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "22wqmUeoXrSx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grouped = group_paragraphs(relabeled)\n",
+        "with f = open(workdir / 'json_training2.txt', 'w', encoding='utf-8') as f:\n",
+        "  for i, tax in enumerate(grouped):\n",
+        "    eval_prompt(f'<s>[INST]\\n{tax.as_row()[\"description\"]}')\n",
+        "    model_input = tokenizer(eval_prompt, return_tensors=\"pt\").to(\"cuda\")\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        print(tokenizer.decode(model.generate(**model_input, max_new_tokens=2048, pad_token_id=2)[0], skip_special_tokens=True), file=f)\n",
+        "\n",
+        "  print(response['message']['content'])"
+      ],
+      "metadata": {
+        "id": "bJeBLyAZWH8r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "from peft import prepare_model_for_kbit_training\n",
         "model.gradient_checkpointing_enable()\n",
